--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,5 @@
             "Hakim\\Backup": "src/"
         }
     },
-    "minimum-stability": "dev-master"
+    "minimum-stability": "stable"
 }
