--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Hakim\\Backup": "src/"
+            "H2akim\\Backup": "src/"
         }
     },
     "minimum-stability": "dev"
